test/tests/stages/8_loops/valid/extra_credit/post_exp_incr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(product)
  =
  const int(1)
  ;
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  ++
  )
  {
  identifier(product)
  =
  identifier(product)
  +
  const int(2)
  ;
  }
  return
  identifier(product)
  ;
  }
