test/tests/stages/8_loops/invalid_parse/missing_for_header_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  )
  ;
  return
  const int(0)
  ;
  }
